# LDE

./: .gitignore  002helloworld.ipynb  README.md  pyproject.toml
01Py4DE/: 00EVDataAnalysis.ipynb  01PythonBasics.ipynb  02PythonIntermediate.ipynb
DataSets/: Electric_Vehicle_Population_Data.csv
your_project_name.egg-info/: PKG-INFO  SOURCES.txt
